--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lala - Confeitaria</title>
+  <title>Lala Confeitaria</title>
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Font Awesome para os ícones -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -29,7 +29,7 @@
         <i class="fas fa-heart"></i> Sobre a Confeitaria
       </a>
       <a href="#" class="link" title="Cardápio via Whatsapp">
-        <i class="fas fa-calendar-check"></i> Cardápio via Whatsapp
+        <i class="fab fa-whatsapp"></i> Cardápio via Whatsapp
       </a>
     </main>
     
