--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
   <!-- GSAP para animações -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
   <!-- Arquivo de scripts -->
-  <script src="LinkTree.js"></script>
+  <script src="LinkTree.js" defer></script>
 </body>
 </html>
